<resources>
    <string name="app_name">Pay Another Round</string>
    <string name="summary">Summary</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="actionbaritem_settings">Settings</string>
    <string name="title_trip_settings">Trip Selection</string>
    <string name="newUser">New User</string>
    <string name="save">Save</string>
    <string name="createTrip">Create Trip</string>
    <string name="menu_entry_delete">Delete</string>
    <string name="lable_no_trip_selected">No Trip Selected</string>
    <string name="button_save">Save</string>
    <string name="menu_entry_edit">Edit</string>
    <string name="extra_tripid" translatable="false">tripid</string>
    <string name="editTrip">Edit Trip</string>
    <string name="lable_summary">Summary</string>
    <string name="extra_userId" translatable="false">extra_user_id</string>
    <string name="text_no_trip_selected">No Trips available, do you like to change to the Trip Settings to create a Trip?</string>
    <string name="lable_yes">Yes</string>
    <string name="lable_no">No</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="title_activity_user_preference">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lable_ok">OK</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers_text">Current Developer:\nStefan Winterberger\n\nOriginal Developer:\nStefan Winterberger</string>
    <string name="about_copyright_title">Copyright</string>
    <string name="about_copyright_text">Stefan Winterberger, 2016</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_contact_text" />
</resources>
